# plotbot-v1

./: .gitignore  README.md  README_Machine_Readable.md  dask  environment.cf.yml  environment.yml  install.sh  plotbot_tutorial_start_here.ipynb  pyproject.toml  pytest.ini  requirements.txt
.claude/: CLAUDE.md
docs/: Jaye_MD_meeting_notes_2025-08-27.md  Jaye_meeting_notes_2025-08-27.html  inconsistent-cells-10-20-25.ipynb  micromamba_installer_issue_summary.md  plotbot_architecture_flow.html  plotbot_micromamba.txt  shape_mismatch_analysis.md
example_notebooks/: E4_encsum.ipynb  Magnetic_Hole_Finder.ipynb  Plotbot_basics.ipynb  Plotbot_mulitplot_rainbows.ipynb  plotbot_alpha_integration_examples.ipynb  plotbot_alpha_proton_derived_examples.ipynb  plotbot_audification_examples.ipynb  plotbot_cdf_import_examples.ipynb  plotbot_custom_variable_examples.ipynb  plotbot_data_access_patterns.ipynb  plotbot_data_snapshot_examples.ipynb  plotbot_density_ham_TEST.ipynb  plotbot_dfb_electric_field_examples.ipynb  plotbot_ham_pickle_generator.ipynb  plotbot_ham_v2_plotting.ipynb  plotbot_interactive_example.ipynb  plotbot_interactive_vdf_example.ipynb  plotbot_ion_scale_waves_2021_08_15_example.ipynb  plotbot_multiplot_degrees_from_center_times_examples.ipynb  plotbot_multiplot_example_all_encounters.ipynb  plotbot_multiplot_examples.ipynb  plotbot_multiplot_ham_example.ipynb  plotbot_psp_orbit_data_examples.ipynb  plotbot_qtn_data_examples.ipynb  plotbot_qtn_integration.ipynb  plotbot_showdahodo_examples.ipynb  plotbot_vdf_composite_test.ipynb  plotbot_vdf_examples.ipynb  plotbot_wind_data_examples.ipynb  psp-wind-conjunction-E22.ipynb  test_pyspedas_data_dir.ipynb  time_clipping_behavior.ipynb
plotbot/: __init__.py  (+51 more)
(+255 files in other folders)
